Update vod support
