# src/cmd/main.go
@@ -102,7 +102,7 @@ func runServer() {
 	v1 := r.Group("/api/v1")
 	{
 		// 演示开启token拦截，实际生产使用请保证开启
-		//v1.Use(authMiddleware.MiddlewareFunc())
+		v1.Use(authMiddleware.MiddlewareFunc())
 		live := v1.Group("/live")
 
 		// 如果是在FC环境，自动更新sts token
@@ -129,6 +129,7 @@ func runServer() {
 			live.POST("/update", gin.WrapF(h.Update))
 			live.POST("/token", gin.WrapF(h.GetToken))
 
+			live.POST("/updateMeetingInfo", gin.WrapF(h.UpdateMeetingInfo))
 			live.POST("/getMeetingInfo", gin.WrapF(h.GetMeetingInfo))
 			live.POST("/joinMeeting", gin.WrapF(h.JoinMeeting))
 			live.POST("/leaveMeeting", gin.WrapF(h.LeaveMeeting))
